--- a/src/app/view/table-detail/table-detail.component.css
+++ b/src/app/view/table-detail/table-detail.component.css
@@ -493,6 +493,31 @@
     color: #000000;
     font-weight: 400;
   }
+  :host ::ng-deep .uploadFilePDF{
+    position: relative;
+    margin: 10px 0 0 0;
+    border-radius: 5px;
+    width: 360px;
+
+  }
+  :host ::ng-deep.flieUpload{
+    position: relative;
+    right: 0px;
+    justify-content: flex-end;
+    width: 360px;
+
+    border-radius: 5px;
+  }
+  input{
+    border: 1px solid rgb(0, 0, 0);
+    border-radius: 5px;
+  }
+  ::-webkit-file-upload-button{
+    border: none;
+    background-color: #24a0ed;
+    color: white;
+    border-radius: 5px 0 0 5px ;
+  }
   
   @media print {
     #myDetail{
