--- a/documentation/css/material-dashboard.css
+++ b/documentation/css/material-dashboard.css
@@ -3860,7 +3860,9 @@ tbody.collapse.show {
   padding: 1.25rem; }
 
 .card-title {
-  margin-bottom: 0.75rem; }
+  margin-bottom: 0.75rem;
+  font-size: 16px;
+ }
 
 .card-subtitle {
   margin-top: -0.375rem;
