--- a/src/app/table-list/table-list.component.html
+++ b/src/app/table-list/table-list.component.html
@@ -41,14 +41,14 @@
             <div class="table-responsive">
               <table width="100%" datatable [dtOptions]="dtOptions" *ngIf="!loading"
                 class="table  table-border table-hover table-bordered nowrap" style="color: black;">
-                <thead class="text-primary" style="color: black;">
+                <thead class="text-primary" style="color: black; font-size: 16px;">
                   <tr>
-                    <th style="width: 2%; white-space: nowrap; text-align: center; color: black;">ครั้งที่</th>
-                    <th style="color: black;">หัวข้อการตรวจสอบ</th>
-                    <th style="width: 10%; color: black;">วันที่เริ่มตรวจสอบ</th>
+                    <th style="width: 2%; white-space: nowrap; text-align: center; color: black;  font-size: 16px;">ครั้งที่</th>
+                    <th style="color: black;  font-size: 16px;">หัวข้อการตรวจสอบ</th>
+                    <th style="width: 10%; color: black; font-size: 16px;">วันที่เริ่มตรวจสอบ</th>
 
-                    <th style="width: 5%; color: black;">สถานที่</th>
-                    <th class="text-center" style="color: black;"><i class="fa fa-gear"></i></th>
+                    <th style="width: 5%; color: black;  font-size: 16px;">สถานที่</th>
+                    <th class="text-center" style="color: black;  font-size: 16px;"><i class="fa fa-gear"></i></th>
                   </tr>
                 </thead>
                 <tbody>
@@ -522,55 +522,20 @@
                       <div *ngIf="isTyproActive" class="full-page-textarea-container">
                         <div class="typroTextBox">
                           <div class="headerText">
-                            <button aria-label="Preview">การพิมพ์ข้อความ</button>
-                            <select class="FontSizeBox" (change)="changeFontSize($event)">
-                              <option value="1">8</option>
-                              <option value="2">10</option>
-                              <option value="3">12</option>
-                              <option value="4" selected >14</option>
-                              <option value="5">18</option>
-                              <option value="6">24</option>
-                             
-                            </select>
-                            <button (click)="formatText('bold')" aria-label="bold">
-                              <i class="fas fa-bold"></i>
-                            </button>
-                            <button (click)="formatText('italic')" aria-label="Italic">
-                              <i class="fas fa-italic"></i>
-                            </button>
-                            <button (click)="formatText('strikeThrough')" aria-label="Strikethrough">
-                              <i class="fas fa-strikethrough"></i>
-                            </button>
-                            <button (click)="formatText('insertUnorderedList')" aria-label="Bullet List">
-                              <i class="fas fa-list-ul"></i>
-                            </button>
-                            <button (click)="formatText('insertOrderedList')" aria-label="Numbered List">
-                              <i class="fas fa-list-ol"></i>
-                            </button>
-                            <button (click)="formatText('justifyLeft')" aria-label="Align Left">
-                              <i class="fas fa-align-left"></i>
-                            </button>
-                            <button (click)="formatText('justifyCenter')" aria-label="Align Center">
-                              <i class="fas fa-align-center"></i>
-                            </button>
-                            <button (click)="formatText('justifyRight')" aria-label="Align Right">
-                              <i class="fas fa-align-right"></i>
-                            </button>
-
+                            <div aria-label="Preview">การพิมพ์ข้อความ</div>
+                            
+                            
 
 
 
                           </div>
-                          <div contenteditable="true" [(ngModel)]="typroText"
-                            class="form-control full-page-textarea div-container" (input)="onInput($event)"
-                            [style.fontSize.px]="initialFontSize">
-                            <div [innerHTML]="detailItems?.record_content"></div>
+                          <angular-editor [placeholder]="'Enter text here...'" [config]="editorConfig" [(ngModel)]="typroText "></angular-editor>
 
 
 
                           </div>
                         </div>
-                      </div>
+                   
                       <div *ngIf="isWritteActive" class="full-page-pdf">
 
                         <div class="writteDraw">
