--- a/src/app/view/table-detail/table-detail.component.html
+++ b/src/app/view/table-detail/table-detail.component.html
@@ -10,15 +10,21 @@
                 <span aria-hidden="true">&times;</span>
             </button>
         </div>
-        
-        <div class="uploadFilePDF"> อัปโหลดไฟล์ของคุณ
-            <input type="file" class="fileUpload" accept="application/pdf" (change)="onFileSelected($event)" style="font-size: 14px;">
-        </div>
-        <div *ngIf="uploadedPDF">
-            <object [data]="uploadedPDF" type="application/pdf" width="100%" height="297mm">
-                <p>PDF cannot be displayed</p>
-            </object>
-        </div>
+    
+          <div class="uploadFilePDF">
+            <label for="fileInput" style="padding: 0 0 0 15px;">อัปโหลดไฟล์ของคุณ</label>
+            <input id="fileInput" type="file" class="fileUpload" accept="application/pdf,image/*" (change)="onFileSelected($event)" style="font-size: 14px;">
+          </div>
+          
+          <div *ngIf="selectedFilePath">
+            <ngx-extended-pdf-viewer *ngIf="isFileDocument" [base64Src]="selectedFileB64" [src]="selectedFilePath" 
+            [useBrowserLocale]="true" [handtool]="false" [showHandToolButton]="true" [render-text]="true" style="display: block; align-items: center;" width="100%" height="297mm">
+              <p style="vertical-align: middle;text-align: center;" >PDF cannot be displayed..</p>
+            </ngx-extended-pdf-viewer>
+            
+            <img *ngIf="isFileImage" [src]="selectedFilePath" alt="Image" style="display: block; align-items: center; max-width:  100%; max-height: 297mm;">
+          </div>
+
         <div id="myDetail" class="modal-body-detail" [ngStyle]="{ width: '210mm' }">
             <!-- เนื้อหาของป๊อปอัพ -->
             <form action method="get">
