--- a/src/assets/scss/core/_cards.scss
+++ b/src/assets/scss/core/_cards.scss
@@ -493,6 +493,7 @@
 
       &:not(.card-header-icon):not(.card-header-text):not(.card-header-image){
         font-family: 'Sarabun',sans-serif;
+        font-size: 16px;
         border-radius: $border-radius-base;
         margin-top: -20px;
         padding: 15px;
