--- a/src/app/table-list/table-list.component.css
+++ b/src/app/table-list/table-list.component.css
@@ -612,6 +612,23 @@ right: 25px;
   font-weight: 400;
 }
 
+:host ::ng-deep .angular-editor-toolbar{
+
+  background-color: #f5f5f5;
+  padding: 3.4px !important;
+  bottom: 2px !important;
+  font-size: 14px !important;
+}
+
+:host ::ng-deep .angular-editor-textarea {
+  border: 1px !important;
+  padding: 10px !important;
+  overflow: auto !important;
+  margin-top: 5px !important;
+  resize: none !important;
+  height: 101.7mm !important;
+  top: -5px !important;
+}
 :host ::ng-deep .custom-confirm-button{
   background-color: #24a0ed !important; 
   color: white !important;
