--- a/src/app/view/table-detail/table-detail.component.html
+++ b/src/app/view/table-detail/table-detail.component.html
@@ -22,7 +22,7 @@
             [useBrowserLocale]="true" [handtool]="false" [showHandToolButton]="true" [render-text]="true" style="display: block; align-items: center;" width="100%" height="297mm">
               <p style="vertical-align: middle;text-align: center;" >PDF cannot be displayed..</p>
             </ngx-extended-pdf-viewer>  -->
-            <pdf-viewer *ngIf="testFile" [src]="testFile"
+            <pdf-viewer id="pdf-viewer" *ngIf="testFile" [src]="testFile"
               [render-text]="true"
               [original-size]="true"
               [show-borders]="true"
@@ -84,10 +84,10 @@
                         </table>
                     </div>
 
-                    <div class="sign-content">
-                        <div class="form-group">
-                            <label>รายชื่อผู้รับผิดชอบ:</label>
-                            <div *ngFor="let person of viewData; let i = index">
+                    <div class="sign-content" >
+                        <div class="form-group" style="width: auto;">
+                            <label style="font-size: 16px;">รายชื่อผู้รับผิดชอบ:</label>
+                            <div *ngFor="let person of viewData; let i = index" >
                                 <div class="UploadContentBox">
                                     
                                     <div class="openSignModal" (click)="openSignModal(i)">
@@ -106,7 +106,7 @@
 
                                 </div>
 
-                                <a style="font-size: 14px;">( {{ person.view_rank }} &nbsp;  {{ person.view_first_name }} &nbsp;{{ person.view_last_name }} )</a>
+                                <a style="position: relative; font-size: 16px; display: inline;">( {{ person.view_rank }} &nbsp;  {{ person.view_first_name }} &nbsp;{{ person.view_last_name }} )</a>
                             </div>
                         </div>
                     </div>
