--- a/src/app/table-list/table-list.component.html
+++ b/src/app/table-list/table-list.component.html
@@ -533,14 +533,14 @@
                       <div *ngIf="isTyproActive" class="full-page-textarea-container">
                         <div class="typroTextBox">
                           <div class="headerText">
-                            <div aria-label="Preview">การพิมพ์ข้อความ</div>
+                            <div aria-label="Preview" style="padding-left: 6px; align-items: center;">การพิมพ์ข้อความ</div>
                             
                             
 
 
 
                           </div>
-                          <angular-editor [placeholder]="'Enter text here...'" [config]="editorConfig" [(ngModel)]="typroText "></angular-editor>
+                          <angular-editor [placeholder]="'พิมพ์ข้อความที่นี้...'" [config]="editorConfig" [(ngModel)]="typroText "></angular-editor>
 
 
 
