--- a/src/app/view/table-detail/table-detail.component.html
+++ b/src/app/view/table-detail/table-detail.component.html
@@ -1,126 +1,195 @@
-
 <div class="MainTableDetail">
-  
-    <div class="Detail-content"[ngStyle]="{ width: '230mm' }" ><!--[ngStyle]="{ width: '230mm', height: '327mm' , height: '297mm' }"-->
-       
+
+    <div class="Detail-content" [ngStyle]="{ width: '230mm' }">
+        <!--[ngStyle]="{ width: '230mm', height: '327mm' , height: '297mm' }"-->
+
         <div class="modal-header card-header card-header-danger">
             <h5 class="modal-title" id="myModalLabel"
                 style="color: white; font-family: 'Sarabun', sans-serif !important; ">รายละเอียด</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="BackRoot()">
                 <span aria-hidden="true">&times;</span>
             </button>
+
         </div>
-    
-          <div class="uploadFilePDF">
+
+        <div class="uploadFilePDF">
             <label for="fileInput" style="padding: 0 0 0 15px;">อัปโหลดไฟล์ของคุณ</label>
-            <input id="fileInput" type="file" class="fileUpload" accept="application/pdf,image/*" (change)="onFileSelected($event)" style="font-size: 14px;">
-            <button type="button" (click)="clearFileInput()" style="position: relative;left:-25px; border: none; background-color: transparent; z-index: 10;"><i class="fa fa-times"></i></button>
-          </div>
-          
-          <div *ngIf="selectedFilePath">
+            <input id="fileInput" type="file" class="fileUpload" accept="application/pdf,image/*"
+                (change)="onFileSelected($event)" style="font-size: 14px;">
+            <button type="button" (click)="clearFileInput()"
+                style="position: relative;left:-25px; border: none; background-color: transparent; z-index: 10;"><i
+                    class="fa fa-times"></i></button>
+        </div>
+        <!-- <button (click)="addDetail()">เพิ่มหน้าใหม่</button> -->
+        <div *ngIf="selectedFilePath">
             <!-- <ngx-extended-pdf-viewer *ngIf="testFile" [base64Src]="testFile"
             [useBrowserLocale]="true" [handtool]="false" [showHandToolButton]="true" [render-text]="true" style="display: block; align-items: center;" width="100%" height="297mm">
               <p style="vertical-align: middle;text-align: center;" >PDF cannot be displayed..</p>
             </ngx-extended-pdf-viewer>  -->
-            <pdf-viewer id="pdf-viewer" *ngIf="testFile" [src]="testFile"
-              [render-text]="true"
-              [original-size]="true"
-              [show-borders]="true"
-              style="width: 400px; height: 500px;" 
-            ></pdf-viewer>
-            <img *ngIf="isFileImage" [src]="selectedFilePath" alt="Image" style="display: block; align-items: center; max-width:  100%; max-height: 297mm;">
-          </div>
+            <pdf-viewer id="pdf-viewer" *ngIf="testFile" [src]="testFile" [render-text]="true" [original-size]="true"
+                [show-borders]="true" style="width: 400px; height: 500px;"></pdf-viewer>
+            <img *ngIf="isFileImage" [src]="selectedFilePath" alt="Image"
+                style="display: block; align-items: center; max-width:  100%; max-height: 297mm;">
+        </div>
 
-        <div id="myDetail" class="modal-body-detail" [ngStyle]="{'display': testFile ? 'none' : 'block', width: '210mm' }">
-            <!-- เนื้อหาของป๊อปอัพ -->
-            <form action method="get">
-                <div class="mainCenter-panel ">
-                    <div class="header-topic">
 
-                        <label style="font-size: 16px; font-weight: bold;">เอกสารตรวจสอบ</label>
-                        <p>{{ detailItems?.record_topic }}</p>
+        <div class="page" id="firstPage">
+            <div id="myDetail" class="modal-body-detail"
+                [ngStyle]="{'display': testFile ? 'none' : 'block', width: '210mm' }">
+                <!-- เนื้อหาของป๊อปอัพ -->
+                <form action method="get">
+                    <div class="mainCenter-panel ">
+                        <div class="header-topic">
 
-                    </div>
+                            <label style="font-size: 16px; font-weight: bold;">เอกสารตรวจสอบ</label>
+                            <p>{{ detailItems?.record_topic }}</p>
 
-                    <div class="detail-content">
-                        <div class="date-flex">
-                            <div class="form-group start-date">
-                                <label>วันที่เริ่มการตรวจสอบ:</label>
-                                <p>{{ detailItems?.record_star_date | thaidate: 'medium' }}</p>
-                            </div>
-                            <div class="form-group end-date">
-                                <label>วันที่เสร็จสิ้นการตรวจสอบ:</label>
-                                <p>{{ detailItems?.record_end_date | thaidate: 'medium' }}</p>
-                            </div>
                         </div>
 
-
-                        <div class="form-group">
-                            <label>รายละเอียด:</label>
-                            <p>{{ detailItems?.record_detail }}</p>
-                        </div>
-                        <div class="form-group">
-                            <label>สถานที่:</label>
-                            <p>{{ detailItems?.record_place }}</p>
-                        </div>
-                    </div>
-                    <div class="main-detail">
-                        <table>
-                            <thead>
-                                <tr>
-                                    <th style="text-align: center; vertical-align: middle;">ครั้งที่</th>
-                                    <th>เนื้อหาการตรวจสอบ</th>
-                                </tr>
-
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td style="vertical-align: text-top;">
-                                        {{detailItems?.record_id}}/{{detailItems?.record_star_date | thaidate :'year'}}
-                                    </td>
-                                    <td [innerHTML]="getSafeHtml(detailItems?.record_content)"></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-
-                    <div class="sign-content" >
-                        <div class="form-group" style="width: auto;">
-                            <label style="font-size: 16px;">รายชื่อผู้รับผิดชอบ:</label>
-                            <div *ngFor="let person of viewData; let i = index" >
-                                <div class="UploadContentBox">
-                                    
-                                    <div class="openSignModal" (click)="openSignModal(i)">
-                                        <a>คลิกเพื่อเซ็น</a>
-
-                                    </div>
-                                    <!-- Sign modal -->
-                                    <div class="Writte-sign" #writteSignElement id="SignModal-{{i}}"
-                                        *ngIf="isSignModalVisible[i]">
-                                        <canvas id="writteSignCanvas-{{i}}" class="full-page-signWritte">Error someting
-                                            with
-                                            canvas</canvas>
-                                     
-                                    </div>
-
-
+                        <div class="detail-content">
+                            <div class="date-flex">
+                                <div class="form-group start-date">
+                                    <label>วันที่เริ่มการตรวจสอบ:</label>
+                                    <p>{{ detailItems?.record_star_date | thaidate: 'medium' }}</p>
                                 </div>
+                                <div class="form-group end-date">
+                                    <label>วันที่เสร็จสิ้นการตรวจสอบ:</label>
+                                    <p>{{ detailItems?.record_end_date | thaidate: 'medium' }}</p>
+                                </div>
+                            </div>
 
-                                <a style="position: relative; font-size: 16px; display: inline;">( {{ person.view_rank }} &nbsp;  {{ person.view_first_name }} &nbsp;{{ person.view_last_name }} )</a>
+
+                            <div class="form-group">
+                                <label>รายละเอียด:</label>
+                                <p>{{ detailItems?.record_detail }}</p>
+                            </div>
+                            <div class="form-group">
+                                <label>สถานที่:</label>
+                                <p>{{ detailItems?.record_place }}</p>
                             </div>
                         </div>
+                        <div class="main-detail">
+                            <table>
+                                <thead>
+                                    <tr>
+                                        <th style="text-align: center; vertical-align: middle;">ครั้งที่</th>
+                                        <th>เนื้อหาการตรวจสอบ</th>
+                                    </tr>
+
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td style="vertical-align: text-top;">
+                                            {{detailItems?.record_id}}/{{detailItems?.record_star_date | thaidate
+                                            :'year'}}
+                                        </td>
+                                        <td [innerHTML]="getSafeHtml(detailItems?.record_content)"></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+
+                        <div class="sign-content"  [ngStyle]="{'display':!remainingContent ? 'flex' : 'none'}">
+                            <div class="form-group" style="width: auto;">
+                                <label style="font-size: 16px;">รายชื่อผู้รับผิดชอบ:</label>
+                                <div *ngFor="let person of viewData; let i = index">
+                                    <div class="UploadContentBox">
+
+                                        <div class="openSignModal" (click)="openSignModal(i)">
+                                            <a>คลิกเพื่อเซ็น</a>
+
+                                        </div>
+                                        <!-- Sign modal -->
+                                        <div class="Writte-sign" #writteSignElement id="SignModal-{{i}}"
+                                            *ngIf="isSignModalVisible[i]">
+                                            <canvas id="writteSignCanvas-{{i}}" class="full-page-signWritte">Error
+                                                someting with canvas</canvas>
+
+                                        </div>
+
+
+                                    </div>
+
+                                    <a style="position: relative; font-size: 16px; display: inline;">( {{
+                                        person.view_rank }} &nbsp; {{ person.view_first_name }} &nbsp;{{
+                                        person.view_last_name }} )</a>
+                                </div>
+                            </div>
+                        </div>
+
+
                     </div>
+                </form>
 
+            </div>
 
-                </div>
-            </form>
+            <!--page2?-->
+            
+            <div id="myDetail" class="modal-body-detail" [ngStyle]="{'display': testFile ||!remainingContent ? 'none' : 'block', width: '210mm' }">
+            
+                <form action method="get">
+                    <div class="mainCenter-panel ">
+                       
+    
+                        <div class="main-detail">
+                            <table>
+                               
+                                <tbody>
+                                    <tr>
+                                        <td style="vertical-align: text-top;">
+                                      
+                                        </td>
+                                        <td [innerHTML]="getSafeHtml(remainingContent)"></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+    
+                        <div class="sign-content" >
+                            <div class="form-group" style="width: auto;">
+                                <label style="font-size: 16px;">รายชื่อผู้รับผิดชอบ:</label>
+                                <div *ngFor="let person of viewData; let i = index" >
+                                    <div class="UploadContentBox">
+                                        
+                                        <div class="openSignModal" (click)="openSignModal(i)">
+                                            <a>คลิกเพื่อเซ็น</a>
+    
+                                        </div>
+                                  
+                                        <div class="Writte-sign" #writteSignElement id="SignModal-{{i}}"
+                                            *ngIf="isSignModalVisible[i]">
+                                            <canvas id="writteSignCanvas-{{i}}" class="full-page-signWritte">Error someting
+                                                with
+                                                canvas</canvas>
+                                         
+                                        </div>
+    
+    
+                                    </div>
+    
+                                    <a style="position: relative; font-size: 16px; display: inline;">( {{ person.view_rank }} &nbsp;  {{ person.view_first_name }} &nbsp;{{ person.view_last_name }} )</a>
+                                </div>
+                            </div>
+                        </div>
+    
+    
+                    </div>
+                </form>
+                
+            </div>
+
             
         </div>
-        <div class="modal-footer">
-            <!-- <button type="button" class="btn btn-success pull-center" (click)="printPDF()">
-            <i class="fa fa-download"></i>&nbsp; ดาว์โหลด
-          </button> -->
 
+
+
+
+        
+
+
+
+
+        <div class="modal-footer">
             <button type="button" class="btn btn-success pull-center" (click)="printPDF()">
                 <i class="fa fa-download"></i>&nbsp; ดาว์โหลด
             </button>
@@ -146,6 +215,8 @@
             </table>
         </div>
     </div> -->
+
+
 
 
 </div>
